syntax = "proto3";
package lobby.setting.proto;

import "pkg/mod/serve/fish_comm/flux/common@v0.1.1/proto/common.proto";
import "serve/service_fish/domain/auth/proto/auth.proto";

message ConfigCall {
    common.proto.EMSGID msgid               = 1;
    string token                            = 2;
    string game_id                          = 3;
    bool clear_power_cycle                  = 4;    // 是否強制清除記錄
    uint32 version                          = 5;    // proto version
    uint32 game_version                     = 6;    // game version
    uint32 subgame_id                       = 7;
}

message ConfigRecall {
    message Bets {
        repeated uint32 bet                 = 1;    // 每階段砲台的 bets
    }
    message RoomInfo {
        string game_id                      = 1;
        uint32 subgame_id                   = 2;
        repeated Bets levels                = 3;    // N 階段砲台
        repeated uint32 line                = 4;    // 目前都是 1
        repeated uint32 rates               = 5;    // 廳的 rates
        repeated string languages           = 6;
        uint32 languages_default_index      = 7;
    }
    common.proto.EMSGID msgid               = 1;
    common.proto.Status.Code status_code    = 2;
    auth.proto.UserInfo player_info         = 3;    // 玩家資訊
    repeated RoomInfo room_info             = 4;    // 房間資訊
}